--- a/TableTennisDrillApp/TableTennisDrillApp.csproj
+++ b/TableTennisDrillApp/TableTennisDrillApp.csproj
@@ -12,4 +12,9 @@
     <Folder Include="Views\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+  </ItemGroup>
+
 </Project>
